I created a swagger.yaml file with my API definition using SwaggerHub
